--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dev": " vite --host",
     "build": " vite build",
     "preview": "vite preview --host",
-    "convert-img": "node convert-img.js ./src/img/base-img ./src/img"
+    "convert-img": "node convert-img.js ./src/img/base-img ./src/img",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "browserslist": [
     "cover 99.5%"
